# dotfiles2

./: .bash_profile  .gitignore  .spacemacs  Makefile  README.md  go.mod  go.sum  link.sh  setup.sh
docker/: Dockerfile
editor/: .gitignore  .spacemacs  Makefile  editorconfig  env.zsh  export.zsh  init.zsh  spacemacs  spacevim.toml
editor/.SpaceVim.d/: init.toml
editor/dein/: cache_nvim  lazy.toml  plugins.toml  state_nvim.vim
editor/doom/: doom
editor/nvim/: .netrwhist  coc-settings.json  init.vim  plugin.vim  plugins.toml  settings.vim  view.vim
editor/script/: bootstrap  setup  update
editor/spacevim/: .netrwhist  coc-settings.json  init.toml  spacevim
lang/: Makefile  README.md  env.zsh  export.zsh  pylintrc  setup.sh
lang/mypy/: config  mypy
lang/script/: bootstrap  golang  install-fsharp-language-server  install-gem  install-haskell-ide-engine  install-haskell-language-server  install-kotlin-language-server  rust  (+8 more)
misc/: mac.terminal
os/: README.md  mac.terminal
script/: bootstrap  build  build-docker-image  console  setup  update
shell/: .bash_profile  .bashrc  .zshenv  .zshrc  Makefile  bash_profile  export.zsh  func  mac.terminal  sshconfig  tmux.conf  zshenv  zshenv_home  zshrc
tmux/: .tmux.conf  Makefile
tools/: Brewfile  Brewfile.lock.json  Cargo.toml  README.md  alacritty.yml  env.zsh  gitconfig  karabiner.json
tools/alacritty/: alacritty.yml
tools/docker/: Dockerfile
tools/git/: gitconfig
tools/karabiner/: karabiner.json
tools/script/: bootstrap  setup  update
tools/starship/: starship.toml
tools/tmux/: tmux.conf
(+12 files in other folders)
