[package]
name = "tools"
version = "0.1.0"
authors = ["shhr1214 <souhei0079@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "alacritty-colors"
path = "src/bin/alacritty-colors.rs"

[[bin]]
name = "battery"
path = "src/bin/battery.rs"

[dependencies]
battery = "0.7.4"
failure = "0.1.5"
yaml-rust = "0.4"
dirs = "2.0.2"
regex = "1.3.7"
proconio = "0.4.1"
